# libdatovka

./: AUTHORS  ChangeLog  CodingStyle  INSTALL  Jenkinsfile  Makefile.am  NEWS  NEWS.libisds  README  TODO  configure.ac  libdatovka.pc.in  libisds.pc.in
client/: Makefile  Makefile.am  Makefile.deps  activate.c  addbox.c  archiveisdsdocument.c  authenticatebigmessage.c  authenticatemessage.c  bigmessagedownload.c  certauth.c  changebox.c  changebox2.c  changepassword.c  changeuser.c  check_time_conversion.c  common.c  common.h  computemessagehash.c  convertdocument.c  createbigmessage.c  deleteuser.c  deleteuser2.c  disableaccesibilityexternaly.c  downloadattachment.c  downloadmessagehash.c  dtinfo.c  getboxlist.c  getchangedstates.c  getlistoferasedmessages.c  getreceived.c  getreceiveddelivery.c  getreceivedenvelope.c  getreceivedsigneddelivery.c  getsenderbyid.c  getsent.c  getsignedreceived.c  getsignedsent.c  getsignedsentbyid.c  getuserboxinfo.c  getuserboxinfo2.c  (+25 more)
debian/: Jenkinsfile  changelog  control  copyright  libdatovka8.metainfo.xml  libdatovka8.symbols  rules  watch
distro/libdatovka/deb/: libdatovka.dsc.in
distro/libdatovka/deb/debian/: changelog.in  control  copyright  libdatovka-dev.install  libdatovka0.symbols  libdatovka5.install  libdatovka5.symbols  libdatovka6.symbols  libdatovka8.symbols  rules  watch
distro/libdatovka/rpm/: libdatovka.spec.in
doc/: Makefile.am  box  document_conversion  government_journals  libdatovka.xml  libisds.xml  login  maintanance_web_services  message  server_locators  test_credentials  user  user_web_services  web_service_interface
include/: Makefile.am
include/libdatovka/: isds.h
po/: ChangeLog  Makevars  POTFILES.in  cs.po  libdatovka.pot  libisds.pot
scripts/: build_archive.sh  build_distrofiles.sh  build_git_archive.sh  build_in_obs.sh  helper_dependency_sources.sh  helper_packaging.sh
server/: login  not_well-formed
server/hotp/: bad_session  good_session  password_change.bad
server/hotp/bad/: request  response
server/messages/: delivery_info-316590.xml  received_message-151916.xml  received_message-330141.zfo  received_signed_message-330141.xml  sent_message-206720.xml  signed_delivered-DD_170272.xml  signed_delivered-DD_170272.zfo  signed_sent_message-151874.zfo  signed_sent_xml_message-373002.xml  signed_sent_xml_message-376701.xml  signed_sent_xml_message-376701.zfo
server/responses/: CreateMessageResponse-9005.xml  DummyOperationResponse-0000.xml  GetListOfErasedMessages-missing-entries.xml  GetOwnerInfoFromLogin-0000.xml  X-BogusOperationResponse-2006.xml  soap_fault
server/tls/: README  ca.cert  client.cert  client.p12  peer  server.cert  token.cert
server/tls/client_nss/: cert8.db  key3.db  secmod.db
src/: Makefile  Makefile.am  Makefile.deps  Makefile.inc  cdecode.c  cdecode.h  cencode.c  cencode.h  compiler.h  crypto.c  crypto.h  crypto_gpg.c  crypto_openssl.c  internal_types.h  isds.c  isds.h  isds_priv.h  multipart_intermediate.c  multipart_intermediate.h  multipart_parts.c  multipart_parts.h  physxml.c  physxml.h  soap.c  soap.h  system.h  time_conversion.c  time_conversion.h  time_conversion_unix.c  time_conversion_win32.c  unix.c  unix.h  utils.c  utils.h  utils_memory.c  utils_memory.h  validator.c  validator.h  win32.c  win32.h
test/: Makefile  Makefile.am  b64decode.c  b64encode.c  compute_hash.c  context.c  dbtype.c  guess_raw_type.c  init_gpgpme.c  isds-datestring2tm.c  isds-dbtype.c  isds-eventstring2event.c  isds-filemetatype.c  isds-hash_algorithm.c  isds-sendertype.c  isds-timestring2timeval.c  isds-timeval2timestring.c  isds-tm2datestring.c  isds-uint2isds_message_status.c  isds-usertype.c  isds_Address_duplicate.c  isds_DbOwnerInfo_duplicate.c  isds_DbOwnerInfo_free.c  isds_DbUserInfo_duplicate.c  isds_DbUserInfo_free.c  isds_PersonName_duplicate.c  isds_approval_free.c  isds_credentials_delivery_free.c  isds_document_free.c  isds_envelope_free.c  isds_event_free.c  isds_hash_free.c  isds_init.c  isds_list_free.c  isds_message_copy_free.c  isds_message_free.c  isds_message_status_change_free.c  isds_pki_credentials_free.c  load_raw.c  login.c  (+9 more)
test/offline/: Makefile.am  b64decode.c  b64encode.c  compute_hash.c  context.c  guess_raw_type.c  init_crypto.c  init_gpgpme.c  isds-crediteventtype.c  isds-datestring2tm.c  isds-dbtype.c  isds-eventstring2event.c  isds-filemetatype.c  isds-hash_algorithm.c  isds-interpret_matches.c  isds-paymenttype.c  isds-sendertype.c  isds-timestring2timeval.c  isds-timeval2timestring.c  isds-tm2datestring.c  isds-uint2isds_message_status.c  isds-usertype.c  isds_AddressExt2_duplicate.c  isds_AddressExt2_free.c  isds_Address_duplicate.c  isds_Address_free.c  isds_BirthInfo_free.c  isds_DbOwnerInfoExt2_duplicate.c  isds_DbOwnerInfoExt2_free.c  isds_DbOwnerInfo_duplicate.c  isds_DbOwnerInfo_free.c  isds_DbUserInfoExt2_duplicate.c  isds_DbUserInfoExt2_free.c  isds_DbUserInfo_duplicate.c  isds_DbUserInfo_free.c  isds_PersonName2_duplicate.c  isds_PersonName2_free.c  isds_PersonName_duplicate.c  isds_PersonName_free.c  isds_approval_free.c  (+23 more)
test/offline/data/: GetListOfErasedMessages-async-response-extracted.xml
test/online/: Makefile.am  common.c  common.h  login.c  login_mep.c  login_mep2.c
test/simline/: Makefile.am  basic_authentication.c  certificate_user_password_authentication.c  hotp_authentication.c  hotp_isds_change_password.c  http.c  http.h  isds_FindDataBox.c  isds_change_password.c  isds_delete_message_from_storage.c  isds_find_box_by_fulltext.c  isds_get_box_state_history.c  isds_get_commercial_credit.c  isds_ping.c  isds_resign_message.c  server.c  server.h  server_cli.c  server_types.h  service.c  service.h  services.h  system.h  totp_authentication.c  totp_isds_change_password.c  unix.c  win32.c  win32.h
